5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1706_3035.log
== TEST (2019-04-29 19:15:16) 
-- CODE:
import math *
x=math.radians(input())


if (x<0 or x>360):
	print('entrada invalida')
elif ((x>=0 and x<90) or (x<=180 and x<270
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:15:22) 
-- CODE:
import math 
x=math.radians(input())


if (x<0 or x>360):
	print('entrada invalida')
elif ((x>=0 and x<90) or (x<=180 and x<270
-- ERROR:
File "XXXX", line 8
    
                                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:15:47) 
-- CODE:
import math 
x=math.radians(input())


if (x<0 or x>360):
	print('entrada invalida')
elif ((x>=0 and x<90) or (x<=180 and x<270)):
	print(math.sin(x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=math.radians(input())
TypeError: must be real number, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:16:11) 
-- CODE:
import math 
x=float(input())


if (x<0 or x>360):
	print('entrada invalida')
elif ((x>=0 and x<90) or (x<=180 and x<270)):
	print(math.sin(x))
-- OUTPUT:
0.8509035245341184
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:16:36) 
-- CODE:
import math 
x=float(input())


if (x<0 or x>360):
	print('entrada invalida')
elif ((x>=0 and x<90) or (x<=180 and x<270)):
	print(math.sin(x))
-- OUTPUT:
0.8509035245341184
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:16:44) 
-- CODE:
import math 
x=float(input())


if (x<0 or x>360):
	print('entrada invalida')
elif ((x>=0 and x<90) or (x<=180 and x<270)):
	print(math.sin(x))
-- OUTPUT:
0.8509035245341184
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:17:47) 
-- CODE:
import math 
x=float(input())
y=math.radians(x)


if (x<0 or x>360):
	print('entrada invalida')
elif ((x>=0 and x<90) or (x<=180 and x<270)):
	print(round(math.sin(y),2))
-- OUTPUT:
0.71
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:18:00) 
-- CODE:
import math 
x=float(input())
y=math.radians(x)


if (x<0 or x>360):
	print('entrada invalida')
elif ((x>=0 and x<90) or (x<=180 and x<270)):
	print(round(math.sin(y),4))
-- OUTPUT:
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:19:45) 
-- CODE:
import math 
x=float(input())
y=math.radians(x)


if (x<0 or x>360):
	print('entrada invalida')
elif ((x>=0 and x<90) or (x<=180 and x<270)):
	print(round(math.sin(y),4))
else ((x<=90 and x<180) or (x<=270 or x<360)):
	print(round(math.cos(y),4))
-- EXECUTION TIME:
0.212999
-- ERROR:
  File "/home/codebench/codes/1706/3035/main.py", line 10
    else ((x<=90 and x<180) or (x<=270 or x<360)):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:20:06) 
-- CODE:
import math 
x=float(input())
y=math.radians(x)


if (x<0 or x>360):
	print('entrada invalida')
elif ((x>=0 and x<90) or (x<=180 and x<270)):
	print(round(math.sin(y),4))
else ((x>=90 and x<180) or (x<=270 or x<360)):
	print(round(math.cos(y),4))
-- EXECUTION TIME:
0.138027
-- ERROR:
  File "/home/codebench/codes/1706/3035/main.py", line 10
    else ((x>=90 and x<180) or (x<=270 or x<360)):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:20:14) 
-- CODE:
import math 
x=float(input())
y=math.radians(x)


if (x<0 or x>360):
	print('entrada invalida')
elif ((x>=0 and x<90) or (x<=180 and x<270)):
	print(round(math.sin(y),4))
else ((x>=90 and x<180) or (x>=270 or x<360)):
	print(round(math.cos(y),4))
-- EXECUTION TIME:
0.206366
-- ERROR:
  File "/home/codebench/codes/1706/3035/main.py", line 10
    else ((x>=90 and x<180) or (x>=270 or x<360)):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:20:16) 
-- CODE:
import math 
x=float(input())
y=math.radians(x)


if (x<0 or x>360):
	print('entrada invalida')
elif ((x>=0 and x<90) or (x<=180 and x<270)):
	print(round(math.sin(y),4))
else ((x>=90 and x<180) or (x>=270 or x<360)):
	print(round(math.cos(y),4))
-- ERROR:
File "XXXX", line 10
    else ((x>=90 and x<180) or (x>=270 or x<360)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:21:04) 
-- CODE:
import math 
x=float(input())
y=math.radians(x)


if (x<0 or x>360):
	print('entrada invalida')
elif ((x>=0 and x<90) or (x<=180 and x<270)):
	print(round(math.sin(y),4))
else ((x>=90 and x<180) or (x>=270 or x<360)):
	print(round(math.cos(y),4))
-- ERROR:
File "XXXX", line 10
    else ((x>=90 and x<180) or (x>=270 or x<360)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:21:18) 
-- CODE:
import math 
x=float(input())
y=math.radians(x)


if (x<0 or x>360):
	print('entrada invalida')
elif ((x>=0 and x<90) or (x<=180 and x<270)):
	print(round(math.sin(y),4))
elif ((x>=90 and x<180) or (x>=270 or x<360)):
	print(round(math.cos(y),4))
-- OUTPUT:
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:21:23) 
-- CODE:
import math 
x=float(input())
y=math.radians(x)


if (x<0 or x>360):
	print('entrada invalida')
elif ((x>=0 and x<90) or (x<=180 and x<270)):
	print(round(math.sin(y),4))
elif ((x>=90 and x<180) or (x>=270 or x<360)):
	print(round(math.cos(y),4))
-- EXECUTION TIME:
0.188303
-- TEST CASE 1:
---- input:
45.0
---- correct output:
0.7071
---- user output:
0.7071
-- TEST CASE 2:
---- input:
275.0
---- correct output:
0.0872
---- user output:
0.0872
-- TEST CASE 3:
---- input:
358.0
---- correct output:
0.9994
---- user output:
0.9994
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
